<resources>
    <string name="app_name">Reminder</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="title_item">Заголовок:</string>
    <string name="cancel">Отмена</string>
    <string name="apple">Применить</string>
    <string name="close">Закрыть</string>
    <string name="stop">Стоп</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_del">Удалить</string>
    <string name="start">Старт</string>
    <string name="quest_del">Удалить запись?</string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="descr">Описание:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>